@@ -19,6 +19,7 @@ xx/xx/xx
 **Improvements:**
 * Compiled .pyc scripts are now only shown in the scripts menu if their magic number matches the available intepreter
 * Centre the background extraction grid vertically instead of starting at the image edge and having a gap (#1741)
+* Right-click scripts directly from the script menu to open them in the editor
 
 siril 1.4.0-beta3
 07/11/25
